--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -29,3 +29,17 @@ td, th{
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
+
+
+// New Home page
+.ios page-home .scroll-content {
+    background: white!important;
+}
+
+
+.home-page .main-content{
+    background: #f2f8fd;
+    border-radius: 4px;
+    box-shadow: 19px;
+    box-shadow: 0px 2px 4px 3px #e8e8e8
+}
