--- a/src/pages/special_event/special_event.scss
+++ b/src/pages/special_event/special_event.scss
@@ -2,3 +2,9 @@
     max-width: 100%;
     border: 1px solid gray;
 }
+
+.special-event .special-date{
+
+    border-bottom: 1px solid;
+    margin-top: -24px;
+}
