--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -36,10 +36,80 @@ td, th{
     background: white!important;
 }
 
+.home-page {
+    color: #606062;
+}
 
 .home-page .main-content{
     background: #f2f8fd;
     border-radius: 4px;
     box-shadow: 19px;
+    padding-bottom: 1px;
     box-shadow: 0px 2px 4px 3px #e8e8e8
 }
+
+.home-page .sub-content {
+     background: #e0e4ee;
+    border-radius: 4px;
+    box-shadow: 19px;
+    box-shadow: 0px 2px 4px 3px #e8e8e8
+}
+
+.home-page .area-progress {
+    background: #ebf1f7;
+    border-radius: 4px;
+    box-shadow: 19px;
+    box-shadow: 0px 2px 4px 1px #e8e8e8
+}
+
+.home-page .area-progress span {
+    color :#0075e8;
+    padding-right: 5px;
+}
+
+.main-content .meals-planned {
+    
+    padding: 30px 0px 0px 20px;
+    font-size: 18px;
+}
+
+.main-content .diet-planned{
+     padding: 8px 0px 0px 21px;
+    font-size: 18px;
+}
+
+.sub-content .col1 {
+    margin: 22px;
+    border-right: 1px solid;
+}
+.sub-content .col2 {
+    margin: 22px;
+}
+
+
+// .home-page .progress-bar {
+
+// }
+
+ 
+    .progress-outer {
+        width: 96%;
+        text-align: center;
+        background-color: #e1e4eb;
+        border: 1px solid #dcdcdc;
+        color: #fff;
+        border-radius: 2px;
+        height: 17px;
+    }
+ 
+    .progress-inner {
+        min-width: 15%;
+        white-space: nowrap;
+        overflow: hidden;
+        padding: 0px;
+        border-radius: 2px;
+        background-color: #488aff;
+        height: 17px;
+        box-shadow: 0px 2px 4px 0px #9e9393;
+    }
+ 
