--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -92,7 +92,7 @@ td, th{
 // }
 
  
-    .progress-outer {
+    .home-page .progress-outer {
         width: 96%;
         text-align: center;
         background-color: #e1e4eb;
@@ -102,7 +102,7 @@ td, th{
         height: 17px;
     }
  
-    .progress-inner {
+    .home-page .progress-inner {
         min-width: 15%;
         white-space: nowrap;
         overflow: hidden;
