--- a/src/pages/trackers/newtrack/newTrack.scss
+++ b/src/pages/trackers/newtrack/newTrack.scss
@@ -1,3 +1,10 @@
 .medical-model .toolbar-ios ion-title {
   padding:0px 66px 1px;
 }
+
+.new_track {
+  ion-list{
+    padding: 50px!important;
+  }
+  
+}
